--- a/force-app/main/default/lwc/lwcBoxAuthInitiator/lwcBoxAuthInitiator.html
+++ b/force-app/main/default/lwc/lwcBoxAuthInitiator/lwcBoxAuthInitiator.html
@@ -1,3 +1,3 @@
 <template>
-    <lightning-button lable="Authenticate with Box" onclick={handleAuthenticate}></lightning-button>
+    <lightning-button variant="brand" label="Authenticate with Box" onclick={handleAuthenticate}></lightning-button>
 </template>
